frame/support/test/tests/benchmark_ui/bad_return_type_blank_with_question.rs
use frame_benchmarking::v2::*;
#[allow(unused_imports)]
use frame_support_test::Config;

#[benchmarks]
mod benches {
	use super::*;

	fn something() -> Result<(), BenchmarkError> {
		Ok(())
	}

	#[benchmark]
	fn bench() {
		something()?;
		#[block]
		{}
		assert_eq!(2 + 2, 4);
	}
}

fn main() {}
